Navigation stack and dark mode fixes for shared wallets

--- a/src/theme/dark.scss
+++ b/src/theme/dark.scss
@@ -1133,7 +1133,8 @@
 
   // 5.4 - Tab Settings
   page-settings,
-  page-about {
+  page-about,
+  page-add-wallet {
     .bp-list {
       ion-note.note {
         background: $bg-color-dark-theme-2;
